# trackCompile

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: .#CADefinitions.h  CADefinitions.h  OCLTest.h  OCLTest.h~
src/: CMakeLists.txt  OCLTest.cpp  OCLUtils.cpp  add2Num.cl  add2Vect.cl  sumNum.cpp
